--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,4 +1,4 @@
-@import '../../public/const.scss';
+@import "../../public/const.scss";
 
 html,
 body {
@@ -10,23 +10,22 @@ body {
 body {
   color: $font;
   background: $body;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-weight: 500;
-  position: relative; 
-  
-  
+  position: relative;
+
   &::before {
-    content: '';
-    position: fixed; 
+    content: "";
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: url("/newYearFon/newYearFon.png");
-    opacity: 0.5; 
-    z-index: -1; 
+    // background: url("/newYearFon/newYearFon.png");
+    opacity: 0.5;
+    z-index: -1;
     pointer-events: none;
   }
 }
